@@ -4,20 +4,11 @@ plugins {
 }
 
 dependencies {
-    implementation(projects.ignacioApi)
     implementation(libs.kotlinxCoroutinesCore)
     implementation(libs.klam)
+    implementation(libs.klamConfigurate)
     implementation(libs.configurateCore)
-    implementation(libs.joltJava)
     //implementation(libs.kotlinxCoroutinesJdk8)
     //implementation(libs.cloudCore)
     //implementation(libs.alexandriaCore)
-
-    testRuntimeOnly(libs.joltJavaNativesLinuxX86)
-}
-
-tasks {
-    test {
-        jvmArgs("--enable-preview", "--enable-native-access=ALL-UNNAMED")
-    }
 }
